<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="no.ntnu.prog2007.sudokusolver.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_insert"
        android:name="no.ntnu.prog2007.sudokusolver.ui.insert.SudokuInsertFragment"
        android:label="@string/title_insert"
        tools:layout="@layout/fragment_sudoku_insert" >
        <action
            android:id="@+id/action_navigation_insert_to_sudokuSolvedFragment"
            app:destination="@id/sudokuSolvedFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_filechooser"
        android:name="no.ntnu.prog2007.sudokusolver.ui.filechooser.FileChooserFragment"
        android:label="@string/title_filechooser"
        tools:layout="@layout/fragment_filechooser" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="no.ntnu.prog2007.sudokusolver.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info"
        />
    <fragment
        android:id="@+id/sudokuSolvedFragment"
        android:name="no.ntnu.prog2007.sudokusolver.ui.solved.SudokuSolvedFragment"
        android:label="fragment_sudoku_solved"
        tools:layout="@layout/fragment_sudoku_solved" />

</navigation>